# routes/config/init.go
@@ -7,4 +7,5 @@ import (
 func InitRouter(router *gin.RouterGroup) {
 	configGrouper := router.Group("/config")
 	configGrouper.GET("/property-type-enum", PropertyTypeEnumData)
+	configGrouper.GET("/property-system-class-enum", PropertySystemClassEnumData)
 }
