# swagger_docs/swagger.json
@@ -17,9 +17,9 @@
     },
     "basePath": "/engine/api",
     "paths": {
-        "/namespace": {
+        "/config/property-system-class-enum": {
             "get": {
-                "description": "查询属性",
+                "description": "查询系统属性类型",
                 "consumes": [
                     "application/json"
                 ],
@@ -29,7 +29,83 @@
                 "tags": [
                     "场景管理"
                 ],
-                "summary": "查询属性",
+                "summary": "查询系统属性类型",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httpx.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/config/property-type-enum": {
+            "get": {
+                "description": "查询属性分类",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "场景管理"
+                ],
+                "summary": "查询属性分类",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httpx.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "additionalProperties": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/namespace": {
+            "get": {
+                "description": "查询命名空间",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "命名空间"
+                ],
+                "summary": "查询命名空间",
                 "parameters": [
                     {
                         "type": "string",
@@ -50,12 +126,6 @@
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "description": "命名空间ID",
-                        "name": "namespaceID",
-                        "in": "query"
-                    },
-                    {
                         "type": "integer",
                         "description": "分页：查询第某页",
                         "name": "pageIndex",
@@ -65,12 +135,6 @@
                         "type": "integer",
                         "description": "分页：每页数量",
                         "name": "pageSize",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "属性集code",
-                        "name": "propertySetCode",
                         "in": "query"
                     },
                     {
@@ -94,7 +158,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/property.Property"
+                                                "$ref": "#/definitions/namespace.Namespace"
                                             }
                                         }
                                     }
@@ -184,7 +248,7 @@
                     {
                         "type": "string",
                         "description": "命名空间ID",
-                        "name": "namespace_id",
+                        "name": "namespaceID",
                         "in": "query"
                     },
                     {
@@ -317,6 +381,92 @@
             }
         },
         "/property": {
+            "get": {
+                "description": "查询属性",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "场景管理"
+                ],
+                "summary": "查询属性",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "描述(模糊查询)",
+                        "name": "description",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "主键id",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "名称(模糊查询)",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "命名空间ID",
+                        "name": "namespaceID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分页：查询第某页",
+                        "name": "pageIndex",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分页：每页数量",
+                        "name": "pageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "属性集code",
+                        "name": "propertySetCode",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "排序字段，默认是以主键倒序，例如：-name,这个例子是以name为倒序排列",
+                        "name": "sortedField",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httpx.JSONResultPaged"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/property.Property"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "创建属性",
                 "consumes": [
@@ -399,6 +549,54 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/property.PropertySet"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/property-set-map": {
+            "get": {
+                "description": "查询属性地图",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "场景管理"
+                ],
+                "summary": "查询属性地图",
+                "parameters": [
+                    {
+                        "minLength": 1,
+                        "type": "string",
+                        "description": "属性集id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httpx.JSONResultPaged"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/property.PropertyMap"
+                                            }
                                         }
                                     }
                                 }
@@ -719,6 +917,45 @@
         "property.Property": {
             "type": "object",
             "properties": {
+                "class": {
+                    "description": "字段类型 int, string, float, ${property_set_code}",
+                    "type": "string"
+                },
+                "description": {
+                    "description": "描述",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "主键ID",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "字段名",
+                    "type": "string"
+                },
+                "namespace_id": {
+                    "description": "关联命名空间",
+                    "type": "string"
+                },
+                "property_set_code": {
+                    "description": "关联属性集",
+                    "type": "string"
+                },
+                "type": {
+                    "description": "字段分类 system or custome",
+                    "type": "string"
+                }
+            }
+        },
+        "property.PropertyMap": {
+            "type": "object",
+            "properties": {
+                "children": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/property.PropertyMap"
+                    }
+                },
                 "class": {
                     "description": "字段类型 int, string, float, ${property_set_code}",
                     "type": "string"
